<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ControlActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/state"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/state_view"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="24dp"
        android:text="@string/NA"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        android:text="@string/reconnect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="64dp"
        android:onClick="onButton_measure"
        android:text="@string/measure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chart_list_recyclerview"
        android:layout_width="348dp"
        android:layout_height="498dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="216dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <edu.uestc.carelink.ui.loadinganimation.AVLoadingIndicatorView
        android:id="@+id/control_indicator"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:indicatorColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/state_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="4dp"
        android:text="@string/label_blood_oxygen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_measure" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="4dp"
        android:text="@string/label_heart_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/spo2Text"
        android:layout_width="52dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        android:text="N/A"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hrText"
        android:layout_width="59dp"
        android:layout_height="21dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="N/A"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/spo2Text" />

    <TextView
        android:id="@+id/tempText"
        android:layout_width="56dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="N/A"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/hrText" />


</androidx.constraintlayout.widget.ConstraintLayout>