<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChartsActivity">

<!--    <edu.uestc.carelink.ui.loadinganimation.AVLoadingIndicatorView-->
<!--        android:id="@+id/loading_indicator"-->
<!--        android:layout_width="382dp"-->
<!--        android:layout_height="111dp"-->
<!--        android:layout_marginStart="12dp"-->
<!--        android:layout_marginTop="40dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <edu.uestc.carelink.ui.loadinganimation.AVLoadingIndicatorView
        android:id="@+id/imageView"
        android:layout_width="388dp"
        android:layout_height="359dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
         />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/blood_oxygen_chart"
        android:layout_width="382dp"
        android:layout_height="111dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.github.mikephil.charting.charts.BarChart>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/heart_rate_chart"
        android:layout_width="382dp"
        android:layout_height="111dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="160dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    </com.github.mikephil.charting.charts.BarChart>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/temperature_chart"
        android:layout_width="382dp"
        android:layout_height="111dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="284dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="146dp"
        android:layout_height="28dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/label_sensor_data_analysis"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature_chart" />

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="268dp"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature_chart">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/label_sensor_data_analysis_temperature"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_text" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/label_sensor_data_analysis_heart_rate"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_text" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/label_sensor_data_analysis_blood_oxygen"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example_text" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>